--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "coverage>=7.8.0",
     "django>=5.1.7",
     "flake8>=7.2.0",
     "pytest-django>=4.10.0",
