--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "coverage>=7.8.0",
     "django>=5.1.7",
+    "django-environ>=0.12.0",
     "flake8>=7.2.0",
     "pytest-django>=4.10.0",
     "sentry-sdk[django]>=2.27.0",
