--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django>=5.1.7",
     "django-environ>=0.12.0",
     "flake8>=7.2.0",
+    "gunicorn>=23.0.0",
     "pytest-django>=4.10.0",
     "sentry-sdk[django]>=2.27.0",
     "whitenoise>=6.9.0",
