--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ coverage==7.8.0
 django==5.1.7
 django-environ==0.12.0
 flake8==7.2.0
+gunicorn==23.0.0
 iniconfig==2.1.0
 mccabe==0.7.0
 packaging==24.2
