--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -34,7 +34,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest through coverage
       run: |
-        coverage -m pytest
+        coverage run -m pytest
     - name: Check coverage
       run: |
         coverage report --fail-under=80%
