--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -37,4 +37,4 @@ jobs:
         coverage run -m pytest
     - name: Check coverage
       run: |
-        coverage report --fail-under=80%
+        coverage report --fail-under=80
