--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -38,3 +38,21 @@ jobs:
     - name: Check coverage
       run: |
         coverage report --fail-under=80
+
+  docker:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ github.sha }}
+          image: grompras/oc_hub
