Add deploy stage to workflow

--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -54,3 +54,12 @@ jobs:
         with:
           push: true
           tags: grompras/oc_hub:${{ github.sha }}
+
+  deploy:
+    needs: docker
+    steps:
+      - uses: actions/checkout@v4
+      - name: Post request to deploy
+        uses: muinmomin/webhook-action@v1.0.0
+        with:
+          url: ${{ secrets.WEBHOOK_URL }}&imgURL=docker.io%2Fgrompras%2Foc_hub%40${{ github.sha }}
