--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -57,6 +57,7 @@ jobs:
 
   deploy:
     needs: docker
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Post request to deploy
