--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Build Python application
+name: Compile Python application
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  productionize:
     runs-on: ubuntu-latest
     env:
       SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
@@ -37,8 +37,8 @@ jobs:
     - name: Check coverage
       run: |
         coverage report --fail-under=80
-  docker:
-    needs: build
+  build:
+    needs: productionize
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -55,7 +55,7 @@ jobs:
 
   await-approval:
     if: github.ref == 'refs/heads/main'
-    needs: docker
+    needs: build
     environment: deploy-approval
     runs-on: ubuntu-latest
     steps:
