--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "gunicorn>=23.0.0",
     "pytest-django>=4.10.0",
     "sentry-sdk[django]>=2.27.0",
+    "sphinx>=8.2.3",
     "whitenoise>=6.9.0",
 ]
