--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,38 @@
+alabaster==1.0.0
 asgiref==3.8.1
+babel==2.17.0
 certifi==2025.4.26
+charset-normalizer==3.4.2
 coverage==7.8.0
 django==5.1.7
 django-environ==0.12.0
+docutils==0.21.2
 flake8==7.2.0
 gunicorn==23.0.0
+idna==3.10
+imagesize==1.4.1
 iniconfig==2.1.0
+jinja2==3.1.6
+markupsafe==3.0.2
 mccabe==0.7.0
 packaging==24.2
 pluggy==1.5.0
 pycodestyle==2.13.0
 pyflakes==3.3.2
+pygments==2.19.1
 pytest==8.3.5
 pytest-django==4.10.0
+requests==2.32.4
+roman-numerals-py==3.1.0
 sentry-sdk==2.27.0
+snowballstemmer==3.0.1
+sphinx==8.2.3
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 sqlparse==0.5.3
 urllib3==2.4.0
 whitenoise==6.9.0
