Update workflow: revert deploy to commit tag

--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -51,8 +51,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: grompras/oc_hub:latest
-          labels: ${{ github.sha }}
+          tags: grompras/oc_hub:${{ github.sha }}
 
   await-approval:
     if: github.ref == 'refs/heads/main'
@@ -69,4 +68,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Post request to deploy
-        run: curl -X POST ${{ secrets.WEBHOOK_URL }}&imgURL=docker.io/grompras/oc_hub:latest
+        run: curl -X POST ${{ secrets.WEBHOOK_URL }}&imgURL=docker.io%2Fgrompras%2Foc_hub%3A${{ github.sha }}
