--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -72,4 +72,4 @@ jobs:
           RAW_URL: docker.io/grompras/oc_hub:${{ github.sha }}
         run: |
           URL=$(echo -n "$RAW_IMG" | perl -MURI::Escape -ne 'chomp;print uri_escape($_)')
-          curl POST "${secrets.WEBHOOK_URL}&imgURL=${URL}
+          curl POST "${secrets.WEBHOOK_URL}&imgURL=${URL}"
