Setup readthedocs project and prevent pipeline run on doc changes

--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -6,8 +6,16 @@ name: Compile Python application
 on:
   push:
     branches: [ "**" ]
+    paths-ignore:
+      - 'docs/**'
+      - 'README.md'
+      - 'readthedocs.yaml'
   pull_request:
     branches: [ "main" ]
+    paths-ignore:
+      - 'docs/**'
+      - 'README.md'
+      - 'readthedocs.yaml'
 
 jobs:
   productionize:
