Update readthedocs file name in workflows ignore paths

--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -9,13 +9,13 @@ on:
     paths-ignore:
       - 'docs/**'
       - 'README.md'
-      - 'readthedocs.yaml'
+      - '.readthedocs.yaml'
   pull_request:
     branches: [ "main" ]
     paths-ignore:
       - 'docs/**'
       - 'README.md'
-      - 'readthedocs.yaml'
+      - '.readthedocs.yaml'
 
 jobs:
   productionize:
