--- a/.github/workflows/build-python-app.yml
+++ b/.github/workflows/build-python-app.yml
@@ -7,13 +7,13 @@ on:
   push:
     branches: [ "**" ]
     paths-ignore:
-      - 'docs/**'
+      - 'doc/**'
       - 'README.md'
       - '.readthedocs.yaml'
   pull_request:
     branches: [ "main" ]
     paths-ignore:
-      - 'docs/**'
+      - 'doc/**'
       - 'README.md'
       - '.readthedocs.yaml'
 
